# aoc-2024-public

./: .gitignore  Cargo.toml  README.md  devenv.nix
.github/workflows/: codspeed.yml
benches/: bench.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  lib.rs
