[package]
name = "aoc-2024-public"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
branches = "0.1.3"
iterator_ilp = "2.1.2"
memchr = "2.7.4"
radsort = "0.1.1"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "bench"
harness = false
